--- a/app/globals.css
+++ b/app/globals.css
@@ -60,5 +60,5 @@ body {
 .bg-ournaments {
   /* background-size: 100px 100px; */
   background-image: url('/ournaments.png');
-  opacity: 30%
+  opacity: 30%;
 }
